cmake_minimum_required(VERSION 3.26)
project(CPP_Programs)

set(CMAKE_CXX_STANDARD 17)

add_executable(IO 01_Input_Output/input_ouput.cpp)
add_executable(DATATYPES 02_DataTypes/datatypes.cpp)
add_executable(IFELSE 03_If_Else/ifelse_app.cpp)
add_executable(RETURNABLE 04_Functions/returnable.cpp)
add_executable(NON_RETURNABLE 04_Functions/non_returnable.cpp)
